--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -19,9 +19,9 @@
       <div class="text-[#cfab7a] mt-4 lg:mt-0 flex flex-wrap justify-center">
         <a href="/" class="px-4 hover:text-white nav-item">Home</a>
         <a href="/#nowplaying" class="px-4 hover:text-white smooth-scroll nav-item active">Now Playing</a>
-        <a href="/" class="px-4 hover:text-white smooth-scroll nav-item">Coming Soon</a>
+        <a href="/#comingsoon" class="px-4 hover:text-white smooth-scroll nav-item">Coming Soon</a>
         <a href="/theaters" class="px-4 hover:text-white nav-item">Theaters</a>
-        <a href="/" class="px-4 hover:text-white smooth-scroll nav-item">About</a>
+        <a href="/#about" class="px-4 hover:text-white smooth-scroll nav-item">About</a>
       </div>
       <div class="flex items-center mt-4 lg:mt-0">
         <% if (session && session.username) { %>
@@ -49,7 +49,7 @@
     <div class="container mx-auto">
       <h1 class="mb-4 text-4xl font-semibold">Now Playing</h1>
       <div class="flex items-center mb-8">
-      <a href="/theaters" class="mr-8 mb-4 cursor-pointer">Find by Location</a>
+      <a href="/theaters" class="mb-4 mr-8 cursor-pointer">Find by Location</a>
       <form id="filterForm" action="/schedules-movie/<%= movie.movie_id %>" method="GET" class="mb-4">
         <select id="selectedCity" name="selectedCity"
           class="px-4 py-2 mr-8 bg-black border-2 rounded cursor-pointer border-cfab7a" onchange="this.form.submit();">
