changing theater-list style, update function on readme

--- a/views/theaters-list.ejs
+++ b/views/theaters-list.ejs
@@ -7,7 +7,6 @@
   <title>Theaters List</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
-  <link rel="stylesheet" href="/styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -31,7 +30,7 @@
   </script>
 </head>
 
-<body class="bg-black">
+<body class="bg-black font-raleway text-cfab7a">
   <!-- Navbar -->
   <nav class="p-10 bg-black text-cfab7a">
     <div class="container flex flex-col items-center justify-between mx-auto lg:flex-row">
